BACKEND: completed auth process
