# backend/docs/swagger.yaml
@@ -1,135 +1,134 @@
+basePath: /
 definitions:
-  models.Address:
+  swagger.LoginRequestPayload:
     properties:
-      city:
+      email:
         type: string
-      country:
+      password:
         type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      region:
-        type: string
-      street:
-        type: string
-      updated_at:
-        type: string
-      user:
-        $ref: '#/definitions/models.User'
-      user_id:
-        type: integer
+    required:
+    - email
     type: object
-  models.Allergy:
+  swagger.SignupDTO:
     properties:
-      allergy:
-        type: string
-      created_at:
-        type: string
-      id:
-        type: integer
-      updated_at:
-        type: string
-    type: object
-  models.BioData:
-    properties:
-      allergies:
-        items:
-          $ref: '#/definitions/models.Allergy'
-        type: array
-      health_conditons:
-        items:
-          $ref: '#/definitions/models.HealthCondition'
-        type: array
-      height:
-        type: integer
-      height_metric:
-        type: string
-      id:
-        type: integer
-      updated_at:
-        type: string
-      user:
-        $ref: '#/definitions/models.User'
-      user_id:
-        type: integer
-      weight:
-        type: integer
-      weight_metric:
-        type: string
-    type: object
-  models.HealthCondition:
-    properties:
-      created_at:
-        type: string
-      health_condition:
-        type: string
-      id:
-        type: integer
-      updated_at:
-        type: string
-    type: object
-  models.User:
-    properties:
-      address:
-        $ref: '#/definitions/models.Address'
-      address_id:
-        type: integer
-      avatar:
-        type: string
-      biodata:
-        $ref: '#/definitions/models.BioData'
-      biodata_id:
-        type: integer
-      created_at:
-        type: string
       dob:
         type: string
       email:
         type: string
-      first_name:
-        type: string
-      id:
-        type: integer
-      is_deleted:
-        type: boolean
-      last_login:
-        type: string
-      last_name:
+      full_name:
         type: string
       password:
         type: string
       phone_number:
         type: string
-      updated_at:
-        type: string
     required:
-    - first_name
-    - last_name
+    - dob
+    - full_name
     - password
+    - phone_number
     type: object
+  user.ForgotPasswordRequestPayload:
+    properties:
+      email:
+        type: string
+    type: object
+  user.ResetPasswordPayload:
+    properties:
+      password:
+        type: string
+      token:
+        type: string
+      user:
+        type: integer
+    required:
+    - password
+    - token
+    - user
+    type: object
+host: localhost:4000
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: This is the API documentation.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: OctoMed
+  version: "1.0"
 paths:
-  /users/{id}:
-    get:
+  /users/create:
+    post:
       consumes:
       - application/json
-      description: Get details of a user by ID
+      description: Create a user with email and password provider
       parameters:
-      - description: User ID
-        in: path
-        name: id
+      - description: Create User Request
+        in: body
+        name: CreateUserRequest
         required: true
-        type: integer
+        schema:
+          $ref: '#/definitions/swagger.SignupDTO'
       produces:
       - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.User'
-      summary: Get a user
+      responses: {}
+      summary: Create a user with email and password
+      tags:
+      - users
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Login
+      parameters:
+      - description: Login Request
+        in: body
+        name: LoginPayload
+        required: true
+        schema:
+          $ref: '#/definitions/swagger.LoginRequestPayload'
+      produces:
+      - application/json
+      responses: {}
+      summary: Login
+      tags:
+      - users
+  /users/request-forgot-password:
+    post:
+      consumes:
+      - application/json
+      description: Request for password reset
+      parameters:
+      - description: Request Reset password
+        in: body
+        name: ForgotPasswordRequestPayload
+        required: true
+        schema:
+          $ref: '#/definitions/user.ForgotPasswordRequestPayload'
+      produces:
+      - application/json
+      responses: {}
+      summary: Request for password reset
+      tags:
+      - users
+  /users/reset-password:
+    post:
+      consumes:
+      - application/json
+      description: Password reset
+      parameters:
+      - description: Reset password
+        in: body
+        name: ResetPasswordPayload
+        required: true
+        schema:
+          $ref: '#/definitions/user.ResetPasswordPayload'
+      produces:
+      - application/json
+      responses: {}
+      summary: Password reset
       tags:
       - users
 swagger: "2.0"
